--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 hs_err_pid*
 out/
 target/
-!.mvn/wrapper/maven-wrapper.jar
+!.mvn/wrapper/maven-wrapper.properties
 !**/src/main/**/target/
 !**/src/test/**/target/
 
@@ -44,3 +44,5 @@ build/
 
 *.db
 db/*
+/HELP.md
+/mvnw
